Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134502

The app crashes with ListView when using contentHeight and fast scrolling with a mouse wheel.

    XMLWordPrintable

Details

    • Windows

    Description

      The app crashes with ListView when using contentHeight and fast scrolling with a mouse wheel.

      To reproduce the issue:
      Navigate to Mouse settings, and in the "Scrolling" section, increase 'Lines to scroll at a time' to 60 or above.
      Next, run the attached example project and start scrolling for a few seconds.
      The issue appears faster with MSVC compiler with the following runtime error:

      --------------------------- Microsoft Visual C++ Runtime Library --------------------------- Debug Error! Program: C:\Qt\6.8.2\msvc2022_64\bin\Qt6Cored.dll Module: 6.8.2 File: C:\Users\qt\work\qt\qtdeclarative\src\quick\items\qquickitem.cpp Line: 3042 ASSERT: "childItems.contains(child)" in file C:\Users\qt\work\qt\qtdeclarative\src\quick\items\qquickitem.cpp, line 3042 
       

        

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes