Add recursion guard to QQuickItemViewPrivate::refill

When scrolling ListView using mouse wheel and the 'Lines to scroll
at a time' setting has been set to 60, the application crashed
when QuickItem is removing child items. Even before crashing, if the
setting is lower(around 15), the application would start getting
'QML ListView: Binding loop detected for property "contentHeight"'.

Due to the binding of the contentItem size to the contentHeight and the
internal connections in Qt, there was a recursive call to
QQuickItemViewPrivate::refill, which then caused the problems.

The flickable uses timeline to animate the scrolling. When the timeline
updates, it calls Flickable::setViewportY, which calls
contentItem->setY. That calls ListView::itemGeometryChanged, which calls
Flickable::itemGeometryChanged. It then calls ListView::viewportMoved,
which eventually calls ItemView::refill for the first time.
The refill causes the geometry to be changed and an item emits
childrenRectChanged. That is connected to the flickable content height,
and Flickable::setContentHeight gets called. It calls fixup, which
resets the timeline and tries to add new value. The value is the same as
before, so timeline ends up with no ops. The timeline.set nevertheless
calls timeline.start, which notices that the timeline is empty, stops
the timeline and emits completed signal. The flickable has connection to
it and Flickable::timelineCompleted gets called. The flickable emits
movementEnded, which is connected to ItemView::animStopped. It then
calls refill again.

Add a recursion guard for the refill. The implementation already has
a recursion guard in QQuickListView::viewportMoved. Based on the comment
there it was added for similar reasons. That recursion guard has been
there since the initial commit. QQuickGridView::viewportMoved also has
recursion guard from very early development and and PathView has a similar
fix since 1416e6bd3ec4aaefe33bb64c9ad64d251f7f2885

Pick-to: 6.10 6.8
Fixes: QTBUG-134502
Change-Id: I60001572fa040ddb2f0a0aac2008e0a8e4052801
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit a7104e3a6ccdfee95f9bf75f55d1e4afe01d91f7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>